fix: 为每个文件的frontformatter增加了date属性

--- a/src/docs/interview/cpp/quark_smart_info/2.md
+++ b/src/docs/interview/cpp/quark_smart_info/2.md
@@ -6,6 +6,7 @@ category:
   - Interview
   - C++
   - Quark
+date: 2025-08-18
 ---
 
 二面只只持续了30分钟，面试官没有问太多技术的问题，也没有算法题，更奇怪的是面试官问到了个人目前的职级，薪酬等二面不该出现的信息，个人感觉二面希望不大，但还是记录下二面的内容，做好查漏补缺。
