--- a/src/docs/interview/cpp/quark_smart_info/1.md
+++ b/src/docs/interview/cpp/quark_smart_info/1.md
@@ -6,6 +6,7 @@ category:
   - Interview
   - C++
   - Quark
+date: 2025-08-13
 ---
 
 夸克一面问题还是非常多的，大部分都是比较底层一点的基础知识，由于我的项目里面提到了网络协议，`Binder`机制、没想到这个团队就是做这些的，听面试官讲，这个部门主要是做网络库封装，`arkts`到移动端的`native binding`能力，程序冷启动优化等业务。因为个人项目经历和投递岗位重合度比较高，面试官疯狂提问，有些东西都太久远了，我都快记不得了😒😒😒。
